--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
 certifi==2025.4.26
+cffi==1.17.1
+cryptography==45.0.3
 distro==1.9.0
 Django==5.2
 dotenv==0.9.9
+exceptiongroup==1.3.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -13,6 +16,7 @@ jiter==0.9.0
 lxml==5.4.0
 openai==1.76.0
 pillow==11.2.1
+pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
 PyMySQL==1.1.1
