--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,9 @@ pillow==11.2.1
 pycparser==2.22
 pydantic==2.11.3
 pydantic_core==2.33.1
+PyMuPDF==1.26.1
 PyMySQL==1.1.1
+python-docx==1.1.2
 python-dotenv==1.1.0
 python-pptx==1.0.2
 sniffio==1.3.1
